# AF-Adapter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
af_adapter/impl/bert/: __init__.py  att.py  ffn.py
examples/: train_mlm.py
scripts/: run_slurm.sh  run_slurm_ddp.sh  train.sh
