[tool.poetry]
name = "af-adapter"
version = "0.1.0"
description = "AF-Adapter (Attention-FFN Adapter): Enhanced Continual Pretraining"
authors = ["yanyongyu <yyy@yyydl.top>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yanyongyu/AF-Adapter"
repository = "https://github.com/yanyongyu/AF-Adapter"
documentation = "https://github.com/yanyongyu/AF-Adapter"
keywords = ["adapter", "transformers"]

[tool.poetry.dependencies]
python = "^3.8"
nlppets = "^0.1.0"
transformers = "^4.30.2"
torch = ">=1.13.1, <3.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^23.1.0"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.poetry.group.example.dependencies]
wandb = "^0.15.4"
evaluate = "^0.4.0"
datasets = "^2.13.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."

[tool.pyright]
reportPrivateImportUsage = false

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
